Fix input fields being too small and causing the datepicker to go offscreen ...

--- a/GrafolanaFront/src/app/globals.css
+++ b/GrafolanaFront/src/app/globals.css
@@ -62,11 +62,15 @@ body {
     min-height: 0; /* Important for Firefox */
 }
 
- input[type="text"]  {
+input[type="text"]  {
     width: 100%;
     padding: 6px;
     background-color: #2A2A2A;
     color: white;
     border: 1px solid #444;
     border-radius: 4px;
+}
+
+.react-datepicker-wrapper {
+    width: 100%;
 }
